frontend/test/should_fail/index_pattern_multiple_edge_index2_mismatch.grg
#using "index_multiple_model.gm"

rule i {
	-e:E{multiple(Ei >= 0, Ei <= 1, Ni >= 42, Ni <= 44)}->;
	
	modify {
	}
}
